# procmeminfo

./: .gitignore  CMakeLists.txt  README.md  build_x64_MinGW.bat
cmake/: sources.cmake
export/: meminfo_new.txt
headers/: main.hpp
import/: meminfo.txt
src/: main.cpp
